# seminar_application_contest_app

./: README.md  create_shortcut.bat  package-lock.json  run_all.vbs
backend/: main.py  pyproject.toml  sensordata.db  test.py
backend/api/: api_router.py
backend/api/endpoints/: setup.py  telemetry.py  websocket.py
backend/core/: config.py  connection_manager.py  database.py  logger.py
backend/lib/: setup.py
backend/models/: telemetry.py
backend/schemas/: setup.py  telemetry.py
backend/service/: setup.py
firmware/: platformio.ini
firmware/include/: config.h
firmware/src/: main.cpp
firmware/src/bmp280_sensor/: readBMP280.cpp  readBMP280.h  setupBMP280.cpp  setupBMP280.h
firmware/src/light_sensor/: readLightSensor.cpp  readLightSensor.h  setupLightSensor.cpp  setupLightSensor.h
firmware/src/network_manager/: networkManager.cpp  networkManager.h
firmware/src/touch_sensor/: touch_sensor.cpp  touch_sensor.h
frontend/: next.config.ts  package-lock.json
frontend/app/: layout.tsx  page.tsx
frontend/app/_components/: Footer.tsx  Header.tsx  RealTimeChart.tsx
frontend/app/setup/: page.tsx
frontend/app/setup/_components/: FormInput.tsx  StatusMessage.tsx  SubmitButton.tsx  WiFiSetupForm.tsx
frontend/app/setup/_hooks/: useWiFiSetup.ts
scripts/: run_all.bat
